<resources>
    <string name="app_name">terremotos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="urlTerremotos">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.geojson</string>
    <string name="title_activity_detalle_terremoto">DetalleTerremoto</string>
    <string name="Fecha">Fecha</string>
    <string name="Profundidad">Profundidad</string>
    <string name="Longitud">Longitud</string>
    <string name="Latitud">Latitud</string>
    <string name="Magnitud">Magnitud:</string>
    <string name="num_terremotos">Numero terremotos:%d</string>
    <string name="Preferencias">Settings</string>
    <string name="terremotos_refresh">Automatico</string>
    <string name="terremotos_filter">Magnitud minima</string>
    <string name="AutoRefreshOnOff">Actualizacion automatica de datos</string>
    <string name="Autorefresh">Automatico</string>
    <string name="MagnitudMinima">Magnitud minima</string>
    <string name="AutoRefreshSummary">Refresco automatico de los terremotos</string>
    <string name="MagnitudMinimaSummary">Magnitud minima que se mostrara</string>
    <string name="PREF_AUTO_UPDATE">Preferencias refresco</string>
    <string name="PREF_UPDATE_INTERVAL">Intervalo de refresco</string>
    <string name="AUTO_REFRESH">Auto</string>
    <string name="Auto_Refresh_Interval">Intervalo de actualizacion</string>
    <string name="Auto_Refresh_Interval_Summary">Listado de tiempos para la actualización automatica de los terremotos</string>
    <string name="MAGNITUDE_VALUES">Valores magnitud</string>
    <string name="magnitude_filter">Filtro de magnitudes</string>
    <string name="magnitude_filter_summary">Selecciona un valor de la lista para filtrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblUrl">lblUrl</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_markers">Mapa</string>
    <string name="lista">Lista</string>
    <string name="mapa">Mapa</string>
    <string name="action_refresh">refresh</string>
</resources>
