<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.airizar.terremotos.DetalleTerremoto"
    android:id="@+id/layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/lblLugar"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Magnitud"
        android:id="@+id/lblMag"
        android:layout_below="@+id/lblLugar"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Latitud"
        android:id="@+id/lblLat"
        android:layout_below="@+id/lblMag"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Longitud"
        android:id="@+id/lblLon"
        android:layout_below="@+id/lblLat"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profundidad"
        android:id="@+id/lblProf"
        android:layout_below="@+id/lblLon"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fecha"
        android:id="@+id/lblFecha"
        android:layout_below="@+id/lblProf"
        android:layout_alignParentStart="true" />

</RelativeLayout>
